--- a/risk_preferences/templates/risk_preferences/Decision.html
+++ b/risk_preferences/templates/risk_preferences/Decision.html
@@ -18,7 +18,7 @@ Investment task
 
 <ul>
     <li>
-    Gamble 1 is the safe gamble, which guarantees to bring you {{ Constants.outcomesA.0 }} $.
+    Gamble 1 is the safe gamble, which guarantees to bring you {{ Constants.outcomesA.0 }}.
     </li>
     <li>
     As the number of the gamble increases, you can earn an increasingly higher payoff if Event B occurs,
@@ -30,12 +30,12 @@ Investment task
     For example:
 <ul>
     <li>
-        If you select Gamble 2 and Event A occurs, you will earn {{ Constants.outcomesA.1 }} $.
-        If Event B occurs, you will earn {{ Constants.outcomesB.1 }} $.
+        If you select Gamble 2 and Event A occurs, you will earn {{ Constants.outcomesA.1 }} .
+        If Event B occurs, you will earn {{ Constants.outcomesB.1 }} .
     </li>
     <li>
-        If you select Gamble 5 and Event A occurs, you will earn {{ Constants.outcomesA.4 }} $.
-        If Event B occurs, you will earn {{ Constants.outcomesB.4 }} $.
+        If you select Gamble 5 and Event A occurs, you will earn {{ Constants.outcomesA.4 }} .
+        If Event B occurs, you will earn {{ Constants.outcomesB.4 }} .
     </li>
 </ul>
 
@@ -49,13 +49,13 @@ Investment task
 
 <table class="table" style="text-align:center">
     <tr> <td> Gambles </td> <td> Event A <br/>(when the random number is 1,2,3,4,5)</td> <td> Event B <br/>(when the random number is 6,7,8,9,10)</td> </tr>
-    <tr><td>{{ form.choice.0 }}</td><td>{{ Constants.outcomesA.0 }} $</td><td>{{ Constants.outcomesB.0 }} $</td></tr>
-    <tr><td>{{ form.choice.1 }}</td><td>{{ Constants.outcomesA.1 }} $</td><td>{{ Constants.outcomesB.1 }} $</td></tr>
-    <tr><td>{{ form.choice.2 }}</td><td>{{ Constants.outcomesA.2 }} $</td><td>{{ Constants.outcomesB.2 }} $</td></tr>
-    <tr><td>{{ form.choice.3 }}</td><td>{{ Constants.outcomesA.3 }} $</td><td>{{ Constants.outcomesB.3 }} $</td></tr>
-    <tr><td>{{ form.choice.4 }}</td><td>{{ Constants.outcomesA.4 }} $</td><td>{{ Constants.outcomesB.4 }} $</td></tr>
-    <tr><td>{{ form.choice.5 }}</td><td>{{ Constants.outcomesA.5 }} $</td><td>{{ Constants.outcomesB.5 }} $</td></tr>
-    <tr><td>{{ form.choice.6 }}</td><td>{{ Constants.outcomesA.6 }} $</td><td>{{ Constants.outcomesB.6 }} $</td></tr>
+    <tr><td>{{ form.choice.0 }}</td><td>{{ Constants.outcomesA.0 }} </td><td>{{ Constants.outcomesB.0 }} </td></tr>
+    <tr><td>{{ form.choice.1 }}</td><td>{{ Constants.outcomesA.1 }} </td><td>{{ Constants.outcomesB.1 }} </td></tr>
+    <tr><td>{{ form.choice.2 }}</td><td>{{ Constants.outcomesA.2 }} </td><td>{{ Constants.outcomesB.2 }} </td></tr>
+    <tr><td>{{ form.choice.3 }}</td><td>{{ Constants.outcomesA.3 }} </td><td>{{ Constants.outcomesB.3 }} </td></tr>
+    <tr><td>{{ form.choice.4 }}</td><td>{{ Constants.outcomesA.4 }} </td><td>{{ Constants.outcomesB.4 }} </td></tr>
+    <tr><td>{{ form.choice.5 }}</td><td>{{ Constants.outcomesA.5 }} </td><td>{{ Constants.outcomesB.5 }} </td></tr>
+    <tr><td>{{ form.choice.6 }}</td><td>{{ Constants.outcomesA.6 }} </td><td>{{ Constants.outcomesB.6 }} </td></tr>
 </table>
 
 <p>
