--- a/bret/templates/bret/Instructions.html
+++ b/bret/templates/bret/Instructions.html
@@ -7,7 +7,7 @@
 {# *** STYLES *** #}
 {# ****************************************************************************************************************** #}
 {% block styles %}
-    <link href="{% static 'bret/css/custom.css' %}" rel="stylesheet"/>
+<link href="{% static 'bret/css/custom.css' %}" rel="stylesheet"/>
 {% endblock %}
 
 
@@ -33,18 +33,20 @@
         </p>
         <p>
             {% blocktrans trimmed %}
-                As soon as you start the task by hitting the 'Start' button,
-                one of the boxes is collected per second, starting from the top-left corner.
-                Once collected, the box marked by a tick symbol.
-                For each box collected you earn {{ box_value }}.
-            {% endblocktrans %}
-        </p>
-        <p>
-            {% blocktrans trimmed %}
                 Behind one of the boxes hides a bomb that destroys everything that has been collected.
                 The remaining {{ num_nobomb }} boxes are worth {{ box_value }} each.
                 You do not know where the bomb is located.
                 You only know that the bomb can be in any place with equal probability.
+            {% endblocktrans %}
+        </p>
+
+        {% if Constants.dynamic %}
+        <p>
+            {% blocktrans trimmed %}
+                As soon as you start the task by hitting the 'Start' button,
+                one of the boxes is collected per second, starting from the top-left corner.
+                Once collected, the box marked by a tick symbol.
+                For each box collected you earn {{ box_value }}.
             {% endblocktrans %}
         </p>
         <p>
@@ -54,18 +56,45 @@
                 If you stop before collecting the bomb, you gain the amount accumulated that far.
             {% endblocktrans %}
         </p>
+        {% else %}
         <p>
             {% blocktrans trimmed %}
-                At the end of the task boxes are toggled by hitting the 'Solve' button.
+                Your task is to collect as many boxes as your want. Once collected, the box marked by a tick symbol.
+            {% endblocktrans %}
+        </p>
+        <p>
+            {% blocktrans trimmed %}
+            If you collect the box where the bomb is located, the bomb will explode and you will earn zero.
+            Otherwise, for each box collected you earn {{ box_value }}.
+            {% endblocktrans %}
+        </p>
+        {% endif %}
+        <p>
+            {% blocktrans trimmed %}
+            Therefore, you can earn more money by collecting more boxes, but it also means you are more likely to collect
+            the bomb and receive a zero payoff.
+            {% endblocktrans %}
+        </p>
+        <p>
+            {% blocktrans trimmed %}
+                When you finish collecting boxes, you can click the "Stop" button, then boxes are toggled by hitting the 'Solve' button.
                 A dollar sign or a fire symbol (for the bomb) will be shown on each of your collected boxes.
             {% endblocktrans %}
         </p>
 
-{% if Constants.num_rounds > 1 %}
-        You will play {{ Constants.num_rounds }} times (rounds), and the computer will randomly select one of these three decision outcomes
-        to determine your payoff for this part.
-{% endif %}
+        <p>
+        {% if Constants.num_rounds > 1 %}
+                {% if Constants.random_payoff %}
+                You will play {{ Constants.num_rounds }} times (rounds), and the computer will randomly select one of these three decision outcomes
+                to determine your payoff for this part.
+                {% else %}
+                You will play {{ Constants.num_rounds }} times (rounds).
+                The first {{ Constants.num_rounds|add:-1 }} rounds are for you to get familiar with the game. Your decisions in these rounds will not affect your payoff.
+                Your payoff is <strong>ONLY determined by the outcome of Round {{ Constants.num_rounds }}</strong>.
+                {% endif %}
+        {% endif %}
+        </p>
     </div>
 
-     {% next_button %}
+{# {% next_button %} #}
 {% endblock %}
