--- a/multiarm_bandit/templates/multiarm_bandit/Introduction.html
+++ b/multiarm_bandit/templates/multiarm_bandit/Introduction.html
@@ -6,6 +6,7 @@ Instructions
 {% endblock %}
 
 {% block content %}
+{% if player.interaction_number == 1 %}
 <p>
     This part of the experiment consists of {{ num_rounds }} rounds.
     In each round, you have five investment opportunities (A, B, C, D, E), displayed as follows:
@@ -34,7 +35,7 @@ Instructions
 </br>
 </br>
 <p>
-   You can choose an option by clicking it, then its payoff will be shown. For example, if you
+    You can choose an option by clicking it, then its payoff will be shown. For example, if you
     choose C and receive 50 points, the following results will be shown:
 </p>
 
@@ -60,20 +61,39 @@ Instructions
 
 </br>
 <p>
-    You can continue to the next round by clicking the payoff.
+    You can continue to the next round by clicking the box showing your payoff.
 </p>
-</br>
 <p>
-    The return of each investment option follows a certain probabilistic distribution. In each round, you
-    have at most 20 seconds to make your decision. If you fail to reach an decision within the allocated time,
-    the computer will randomly choose an option, and <strong>your payoff for that round will NOT be counted towards your
-    final earnings</strong>.
-    {% if player.round_number == 1 %}
-    {% endif %}
+    The return of each investment option follows a certain probabilistic distribution.
 </p>
 
+{% else %}
+<p>
+    This part of the experiment consists of {{ num_rounds }} rounds.
+    You still have five investment opportunities (A, B, C, D, E), but <strong>the returns of each investment follow different
+    probabilistic distributions from the previous part</strong>.
+</p>
+
+{% endif %}
+
+<p>
+    In each round, you have at most <strong>20 seconds to make your decision</strong>.
+    If you fail to reach an decision within the allocated time, the computer will randomly choose an option,
+    and your payoff for that round will NOT be counted towards your
+    final earnings.
+</p>
+
+
+<p>
+    The history of your past choices and payoffs will be provided, in case you want to check the corresponding informatin.
+    However, keep in mind that you should not spend too much time studying the history.
+</p>
+
+
+{% comment %}
 <div style="text-align:right">
     {% next_button %}
 </div>
+{% endcomment %}
 {% endblock %}
 
