--- a/multiarm_bandit/templates/multiarm_bandit/Results.html
+++ b/multiarm_bandit/templates/multiarm_bandit/Results.html
@@ -11,79 +11,60 @@ Result
 <div class="row">
     <div class="col-sm-1"> </div>
     <div class="col-sm-2">
-
-        {% if player.choice == 0 %}
+        {% if player.choice == 0 and player.payoff != 0 %}
         <button class="btn btn-primary btn-block"> {{ player.payoff }} </button>
         {% else %}
         <button type="button" class="btn btn-primary btn-block disabled"> A </button>
         {% endif %}
-
     </div>
     <div class="col-sm-2">
-
-        {% if player.choice == 1 %}
+        {% if player.choice == 1 and player.payoff != 0 %}
         <button class="btn btn-primary btn-block"> {{ player.payoff }} </button>
         {% else %}
         <button type="button" class="btn btn-primary btn-block disabled"> B </button>
         {% endif %}
-
     </div>
     <div class="col-sm-2">
-
-        {% if player.choice == 2 %}
+        {% if player.choice == 2 and player.payoff != 0 %}
         <button class="btn btn-primary btn-block"> {{ player.payoff }} </button>
         {% else %}
         <button type="button" class="btn btn-primary btn-block disabled""> C </button>
         {% endif %}
-
     </div>
     <div class="col-sm-2">
-
-        {% if player.choice == 3 %}
+        {% if player.choice == 3 and player.payoff != 0 %}
         <button class="btn btn-primary btn-block"> {{ player.payoff }} </button>
         {% else %}
         <button type="button" class="btn btn-primary btn-block disabled"> D </button>
         {% endif %}
-
     </div>
     <div class="col-sm-2">
-
-        {% if player.choice == 4 %}
+        {% if player.choice == 4 and player.payoff != 0 %}
         <button class="btn btn-primary btn-block"> {{ player.payoff }} </button>
         {% else %}
         <button type="button" class="btn btn-primary btn-block disabled""> E </button>
         {% endif %}
-
     </div>
     <div class="col-sm-1"> </div>
 </div>
-
-
 </br>
+{% if player.payoff != 0 %}
+<p>You have chosen {{ player.get_choice_display }} and received {{ player.payoff }}. Click on the payoff to continue.</p>
+{% else %}
+<p>You did NOT make your decision within the time limit, and you <strong> do not receive payoff for this round. </strong></p>
+{% endif %}
+<p>
+{% if player.interaction_number == 3 and player.round_in_interaction > Constants.info_round %}
+    {% if player.treatment <= 2 %}
+       The average payoff of your group is {{ player.average_pay }}
+    {% else %}
+       The highest payoff of your group is {{ player.max_pay }}
+    {% endif %}
+{% endif %}
+</p>
 </br>
-</br>
-<h5 style="text-align:center">
-    History
-</h5>
-<table class="table" style="text-align:center">
-    <tr>
-        <th style="text-align:center">Round</th>
-        <th style="text-align:center">Your choice</th>
-        <th style="text-align:center">Your payoff</th>
-    </tr>
-    {% for p in all_players %}
-        {% if p.interaction_number == player.interaction_number %}
-    <tr>
-        <td>{{ p.round_in_interaction}}</td>
-        <td>{{ p.get_choice_display }}</td>
-        <td>{{ p.payoff}}</td>
-    </tr>
-        {% endif %}
-    {% endfor %}
 
-</table>
-
-
+{% include Constants.history_template %}
 {% endblock %}
 
 
