--- a/coopetition_mturk/templates/coopetition_mturk/Introduction.html
+++ b/coopetition_mturk/templates/coopetition_mturk/Introduction.html
@@ -9,7 +9,7 @@ Introduction: Part 2
 
 <p>
     This is the start of Part 2 of the experiment.
-    There will be <strong>{{ Constants.interaction_length.1 }}</strong>   rounds of decision-making.
+    There will be {{ Constants.interaction_length.1 }} rounds of decision-making.
     You will be matched with <strong>the same participant</strong> as in Part I.
 </p>
 <p>
