--- a/coopetition_mturk/templates/coopetition_mturk/StartPage.html
+++ b/coopetition_mturk/templates/coopetition_mturk/StartPage.html
@@ -11,9 +11,7 @@
     </p>
     <p>
 
-            You will interact with the same participant for <strong>
-            {{ Constants.interaction_length.0 }} rounds
-        </strong> in this part.
+            You will interact with the same participant for {{ Constants.interaction_length.0 }} rounds in this part.
     </p>
     <p>
         <strong>
