--- a/multiarm_bandit/templates/multiarm_bandit/Introduction.html
+++ b/multiarm_bandit/templates/multiarm_bandit/Introduction.html
@@ -75,19 +75,20 @@ Instructions
 </p>
 
 {% endif %}
-
-<p>
-    In each round, you have at most <strong>20 seconds to make your decision</strong>.
-    If you fail to reach an decision within the allocated time, the computer will randomly choose an option,
-    and your payoff for that round will NOT be counted towards your
-    final earnings.
-</p>
-
-
 <p>
     The history of your past choices and payoffs will be provided, in case you want to check the corresponding informatin.
     However, keep in mind that you should not spend too much time studying the history.
 </p>
+
+<p>
+    In each round, you have at most <strong>20 seconds to make your decision.</strong>
+    If you fail to reach an decision within the allocated time,
+    <strong>your payoff for that round will NOT be counted towards your final earnings</strong> --
+    make sure you choose an option within the time limit</strong>.
+</p>
+
+
+
 
 
 {% comment %}
