--- a/payment_online/templates/payment_online/EndInfo.html
+++ b/payment_online/templates/payment_online/EndInfo.html
@@ -10,15 +10,15 @@
 <p> <strong> Payment Information </strong> </p>
 
 <p>This is the end of the experiment. Thank you for your participation.</p>
-<!--<p>Your flat payment fee is {{participation_fee}}.</p>-->
-<!--<p>You bonus earnings in the experiment is {{experiment_payoff}}, which is {{payment}}.</p>-->
+<p>Your flat payment fee is {{participation_fee}}.</p>
+<p>You bonus earnings in the experiment is {{experiment_payoff}}, which is {{payment}}.</p>
 <p><strong> You payment of the experiment is  {{final_payment}}</strong> </p>
 
 <!--<p>Your MTurk Woker ID is  {{ player.workerid }}.</p>-->
 
-<!--</br> <p><strong>IMPORTANT:</strong> Please provide the following participation code to the MTurk HIT in order to receive credit for-->
-<!--taking the experiment. </p>-->
-<!--<p style="text-align:center"> <strong> Your participation code: {{participant.code}}</strong> </p>-->
+</br> <p><strong>IMPORTANT:</strong> Please provide the following participation code to the MTurk HIT in order to receive credit for
+taking the experiment. </p>
+<p style="text-align:center"> <strong> Your participation code: {{participant.code}}</strong> </p>
 
 {% else %}
 <p>This is the end of the experiment. </p>
